--- a/src/Job-Hub/scheduler.css
+++ b/src/Job-Hub/scheduler.css
@@ -511,3 +511,7 @@ body.light-mode {
 }
 
 /* =============================================================================================== */
+
+.scheduler-dashboard-container{
+  margin-top: 5px;
+}
