--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
-body{
-    margin: 0;
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
